tests/ui/async-await/no-unsafe-async.stderr
error: expected one of `extern` or `fn`, found keyword `async`
  --> $DIR/no-unsafe-async.rs:7:12
   |
LL |     unsafe async fn g() {}
   |     -------^^^^^
   |     |      |
   |     |      expected one of `extern` or `fn`
   |     help: `async` must come before `unsafe`: `async unsafe`
   |
   = note: keyword order for functions declaration is `pub`, `default`, `const`, `async`, `unsafe`, `extern`

error: expected one of `extern` or `fn`, found keyword `async`
  --> $DIR/no-unsafe-async.rs:11:8
   |
LL | unsafe async fn f() {}
   | -------^^^^^
   | |      |
   | |      expected one of `extern` or `fn`
   | help: `async` must come before `unsafe`: `async unsafe`
   |
   = note: keyword order for functions declaration is `pub`, `default`, `const`, `async`, `unsafe`, `extern`

error: aborting due to 2 previous errors

